@@ -5,6 +5,7 @@ Version 7.0.0
 - Cleaned up the Spin parser to enable direct access to struct/obj members
 - Fixed long relative branches (tjz, djnz, etc.)
 - Fixed incorrect handling of simple for loops with unsigned variables
+- Improved some debug error messages
 - Only use the stack for variables whose address is actually taken (thanks to Ada for this!)
 
 Version 6.9.10
